cros: Update AppsGridView bottom drag buffer

The AppsGridView is transformed to fit on screens that use display zoom.

Use the current transform to calculate the bottom of the AppsGridView,
then consider all drags below AppsGridView "in the buffer". The old
buffer values do not make sense with the redesign, and with a scaled
display.

Bug: 907914
Change-Id: I40e15fc8ba4f1022a9def18ac97fd0bab0d2d031
Reviewed-on: https://chromium-review.googlesource.com/c/1354479
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614429}
Former-commit-id: 9504f17bdd7940d0d8064259f57291baa895002e